# VulkanCapsViewer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CustomFilterProxyModel.cpp  CustomFilterProxyModel.h  CustomFilterProxyModel.hpp  NVIDIA GeForce RTX 4070 ff1.json  NVIDIA GeForce RTX 4070 ff2.json  NVIDIA GeForce RTX 4070 str.json  NVIDIA GeForce RTX 4070.json  README.md  VulkanContext.cpp  VulkanContext.h  VulkanDeviceInfoExtensions.cpp  VulkanDeviceInfoExtensions.h  android-vulkanCapsViewer-deployment-settings.json  app_process  appleutils.mm  extensionlist.md  extensionlist.txt  linker64  llvmpipe (LLVM 17.0.6, 256 bits).json  log.txt  main.cpp  makeviewmetal.mm  settings.cpp  settings.h  settingsDialog.cpp  settingsDialog.h  submitDialog.cpp  submitDialog.h  treeproxyfilter.cpp  treeproxyfilter.h  vulkanAndroid.cpp  vulkanAndroid.h  vulkanCapsViewer.args.json  vulkanCapsViewer.cpp  vulkanCapsViewer.desktop  vulkanCapsViewer.h  (+33 more)
.github/workflows/: build.yml
.qtc_clangd/: compile_commands.json
GeneratedFiles/: qrc_vulkancapsviewer.cpp  ui_vulkancapsviewer.h
VulkanDeviceExtensionsFileGenerator/: vulkanDeviceExtensionsFileGenerator.php
VulkanDeviceExtensionsFileGenerator/templates/: VulkanDeviceInfoExtensions.h
android/: AndroidManifest.xml  build.gradle
android-build/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
android-build/res/values/: libs.xml
android/res/values/: libs.xml
docs/: linux_appimage.md  releasing_versions.md  update_headers.md
flatpak/: flatpak_install.patch  org.vulkanCapsViewer.VulkanCapsViewer.yml
gfx/: android_banner_tv.psd  android_icon.psd  new_icon.kra
iOS/: Info.plist
libs/openssl/: README.md
libs/openssl/armeabi-v7a/: README.md
libs/openssl/x86/: README.md
libs/vulkan/: vulkan-1.lib
macOS/: Info.plist
profiles/: vulkan_profiles.hpp
redist/: android_release.py  build_redist.py  deploy.sh  linux_release.py  windows_release.py
tools/: deviceExtensionsFileGenerator.php  download_releases.bat  download_releases.php  linuxdeploy_env.sh  updateheaders.bat  updateprofilelibrary.bat
tools/templates/: VulkanDeviceInfoExtensions.cpp  VulkanDeviceInfoExtensions.h
